Adding FULL LENGTH SPAN nav bar

--- a/static/css/shared-styles.css
+++ b/static/css/shared-styles.css
@@ -1,4 +1,9 @@
 /* General styles */
+html, body {
+    width: 100%;
+    overflow-x: hidden; /* Prevent horizontal scrolling */
+}
+
 body {
     font-family: Arial, sans-serif;
     background-color: #f4f4f4;
@@ -8,7 +13,6 @@ body {
     flex-direction: column;
     align-items: center;
     min-height: 100vh;
-    overflow-x: hidden; /* Prevent horizontal scrolling */
 }
 
 header {
@@ -24,7 +28,7 @@ h1, h2 {
 
 /* Navigation styles */
 nav {
-    width: 100vw; /* Ensure nav covers the full viewport width */
+    width: 100%; /* Ensure nav covers the full width */
     background-color: #333;
     padding: 7px 0; /* Adjust this padding to control the thickness */
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -52,7 +56,6 @@ nav .nav-list {
     display: flex;
     justify-content: center;
     width: 100%; /* Ensure the nav-list covers the full width */
-    overflow-x: hidden; /* Prevent horizontal scrolling */
 }
 
 nav .nav-list li {
