--- a/templates/tables.html
+++ b/templates/tables.html
@@ -11,21 +11,22 @@
     <header>
         <h1>Sales Reporting System</h1>
     </header>
-    <nav>
-        <div class="menu-toggle" id="mobile-menu">
-            <span class="bar"></span>
-            <span class="bar"></span>
-            <span class="bar"></span>
-        </div>
-        <ul class="nav-list">
-            <li><a href="/">Files</a></li>
-            <li><a href="/tables">Tables</a></li>
-            <li><a href="/stored_procedures">Stored Procedures</a></li>
-            <li><a href="/table_data">Table Data</a></li>
-            <li><a href="/visualizations">Visualizations</a></li>
-            <li><a href="/explore_data">QuickQueryAI</a></li>
-        </ul>
-    </nav>
+<nav>
+    <div class="menu-toggle" id="mobile-menu">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+    </div>
+    <ul class="nav-list">
+        <li><a href="/">Home</a></li>
+        <li><a href="/files">Files</a></li>
+        <li><a href="/tables">Tables</a></li>
+        <li><a href="/stored_procedures">Stored Procedures</a></li>
+        <li><a href="/table_data">Table Data</a></li>
+        <li><a href="/visualizations">Visualizations</a></li>
+        <li><a href="/explore_data">QuickQueryAI</a></li>
+    </ul>
+</nav>
     <div class="container">
         <h2>Tables</h2>
         
