--- a/templates/visualizations.html
+++ b/templates/visualizations.html
@@ -11,27 +11,26 @@
     <header>
         <h1>Sales Reporting System</h1>
     </header>
-<nav>
-    <div class="menu-toggle" id="mobile-menu">
-        <span class="bar"></span>
-        <span class="bar"></span>
-        <span class="bar"></span>
-    </div>
-    <ul class="nav-list">
-        <li><a href="/">Home</a></li>
-        <li><a href="/files">Files</a></li>
-        <li><a href="/tables">Tables</a></li>
-        <li><a href="/stored_procedures">Stored Procedures</a></li>
-        <li><a href="/table_data">Table Data</a></li>
-        <li><a href="/visualizations">Visualizations</a></li>
-        <li><a href="/explore_data">QuickQueryAI</a></li>
-    </ul>
-</nav>
+    <nav>
+        <div class="menu-toggle" id="mobile-menu">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </div>
+        <ul class="nav-list">
+            <li><a href="/">Home</a></li>
+            <li><a href="/files">Upload Files</a></li>
+            <li><a href="/table_data">Data Preview</a></li>
+            <li><a href="/visualizations">BI Dashboards</a></li>
+            <li><a href="/explore_data">QuickQueryAI</a></li>
+            <li><a href="/admin">Admin</a></li>
+        </ul>
+    </nav>
     <div class="container wide">
-        <h2>Power BI Dashboard</h2>
+        <h2>BI Dashboards</h2>
         <div class="section">
-            <div class="section-header">Sales Reporting Dashboard</div>
-            <p>Below is the embedded Power BI dashboard providing insights into sales reporting metrics.</p>
+            <div class="section-header">Visualize Metrics and Trends</div>
+            <p>Below is the embedded BI dashboard providing insights into sales reporting metrics.</p>
             <br>
             <iframe title="SalesRepViz_1" src="https://app.powerbi.com/view?r=eyJrIjoiZmFkZTU0YmUtYTJlZi00ZjhmLWE5ZjktYWViYjcxOWJmNWMzIiwidCI6IjYwOTU2ODg0LTEwYWQtNDBmYS04NjNkLTRmMzJjMWUzYTM3YSIsImMiOjF9" allowFullScreen="true"></iframe>
         </div>
